<resources>
    <string name="app_name">Aplikasi Github User (Navigation dan API)</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="argumelar_pamungkas">Argumelar Pamungkas</string>
    <string name="argumpamungkas">argumpamungkas</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="tidak_mempunyai_followers">Tidak mempunyai followers</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning">warning</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="favorite">Favorite</string>
    <string name="tidak_ada_favorite">Tidak ada Favorite</string>
</resources>